data/derived/comb/progs/unify/prog8452.ml.out
Characters 70-71:
  | (h::t)  ->  t@h;;
                  ^
Error: This expression has type 'a but an expression was expected of type
         'a list
       The type variable 'a occurs inside 'a list
